start refactoring integration tests